# ioc-finder

./: .codacy.yml  .coveragerc  .editorconfig  .gitignore  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  changelog.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py  utility.py
.benchmarks/Darwin-CPython-3.14-64bit/: 0001_benchmark.json
.benchmarks/Linux-CPython-3.10-64bit/: 0001_benchmark.json  0002_benchmark.json
.benchmarks/Linux-CPython-3.14-64bit/: 0001_benchmark.json
.benchmarks/Windows-CPython-3.14-64bit/: 0001_benchmark.json
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  lint.yaml  lint.yml  pytest.yml  python-publish.yml  windows-benchmark-baseline.yml
development/: index.html
docker/: lint.sh
docs/: development.md  index.md  quick-start.md
docs/overrides/: base.html  main.html
ioc_finder/: __init__.py  data.py  data_lists.py  ioc_finder.py  ioc_grammars.py
ioc_finder/data/: regexes.ini
quick-start/: index.html
scripts/: find_hotspots.py
search/: search_index.json
tests/: benchmarks.py  test_asns.py  test_attack_data.py  test_benchmarks.py  test_cli.py  test_concurrency.py  test_domains.py  test_edge_cases.py  test_execution_time.py  test_file_paths.py  test_find_iocs.py  test_ioc_finder.py  test_logging.py  test_long_input_strings.py  test_malware_names.py  test_odd_ip_address_formats.py  test_parsing_functions.py  test_regexes.py  test_registry_keys.py  test_urls.py  test_urls_only.py  test_utility_functions.py  test_with_hypothesis.py
tests/data/: __init__.py  cves.py  domains.py  long-article-1.txt  long-article-2.txt
tests/find_iocs_cases/: __init__.py  asns.py  attack_data.py  coins.py  cves.py  domains.py  email.py  feature__data_types.py  feature__included_ioc_types.py  file_paths.py  hashes.py  ids.py  ip_addr.py  mac_addr.py  registry_keys.py  tlp_labels.py  urls.py  user_agents.py
